payroll-front/landing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payroll-front
  namespace: default
spec:
  selector:
    matchLabels:
      app: payroll-front
  template:
    metadata:
      labels:
        app: payroll-front
    spec:
      containers:
      - name: payroll-front
        image: myawesomeapps/payroll-front:1.0
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
