payroll-front/landing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payroll-front-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: payroll-front
  ports:
  - port: 80
    targetPort: 3000
