payroll-front/landing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payroll-front-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    name: payroll-front-ingress
spec:
  tls:
    - hosts:
      - "salario.ninja"
      secretName: "payroll-front-tls"
  rules:
  - host: salario.ninja
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: payroll-front-svc
            port:
              number: 80
